--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
     <title>Gorg - Gorgeours Game Engine</title>
   </head>
   <body>
-    <script type="module" src="./index.js"></script>
+    <div id="root"></div>
+    <script type="module" src="example.js"></script>
   </body>
 </html>
