--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="coords"></div>
     <script type="module" src="example.js"></script>
   </body>
 </html>
