Add input manager implementation and a coord projection helper to camera instance

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="coords"></div>
+    <div id="debug"></div>
     <script type="module" src="example.js"></script>
   </body>
 </html>
