--- a/example/index.html
+++ b/example/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Gorg - Gorgeours Game Engine</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <div id="debug"></div>
-    <script type="module" src="example.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Gorg - Gorgeours Game Engine</title>
+  <style>
+    canvas {
+      cursor: none;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="root"></div>
+  <div id="debug"></div>
+  <script type="module" src="example.js"></script>
+</body>
+
 </html>
